fix: tune progress bar, remove gap

--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -165,7 +165,7 @@ html[data-theme="light"] {
     width: 100%;
     // overflow: hidden;
     z-index: 10;
-    margin-top: 25px;
+    margin-top: 23px;
 }
 
 body {
